--- a/index.html
+++ b/index.html
@@ -244,14 +244,14 @@ innovation and excellence.
               <h4>Diploma In Desktop Publishing and Networking / Frontend Development</h4>
               <h5>2016 - 2017</h5>
               <p><em>Catholic Institute Of Information and Tech.</em></p>
-              <p>Qui deserunt veniam. Et sed aliquam labore tempore sed quisquam iusto autem sit. Ea vero voluptatum qui ut dignissimos deleniti nerada porti sand markend</p>
+              <p>This diploma program focused on the skills needed for desktop publishing, networking, and frontend development, preparing students for careers in technology and design.</p>
             </div><!-- Edn Resume Item -->
 
             <div class="resume-item">
               <h4>Certified of Completion PHP and Laravel Development</h4>
               <h5>2020-2021</h5>
               <p><em>Udemy Online Course</em></p>
-              <p>Quia nobis sequi est occaecati aut. Repudiandae et iusto quae reiciendis et quis Eius vel ratione eius unde vitae rerum voluptates asperiores voluptatem Earum molestiae consequatur neque etlon sader mart dila</p>
+              <p>This certification signifies my successful completion of a comprehensive online course in PHP and Laravel development. Throughout the program, I gained valuable skills in web application development, including backend programming, database management, and the use of the Laravel framework to build robust and scalable applications.</p>
             </div><!-- Edn Resume Item -->
 
           </div>
