--- a/index.html
+++ b/index.html
@@ -679,7 +679,7 @@ innovation and excellence.
       
       <div class="container section-title" data-aos="fade-up">
         <h2>Contact</h2>
-        <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p>
+        <!-- <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p> -->
       </div>
 
       <div class="container" data-aos="fade" data-aos-delay="100">
@@ -692,7 +692,7 @@ innovation and excellence.
             <div class="info-item d-flex" data-aos="fade-up" data-aos-delay="300">
               <i class="bi bi-telephone flex-shrink-0"></i>
               <div>
-                <h3>Call Us</h3>
+                <h3>Call Me</h3>
                 <p>+234 902 458 5559</p>
               </div>
             </div>
