--- a/index.html
+++ b/index.html
@@ -756,10 +756,10 @@ innovation and excellence.
       <h3 class="sitename">Godwin Eliaschukwudi</h3>
       <p>Full-Stack Developer:: React JS || ReactNative || Vue || PHP || Laravel framework || CI/CD</p>
       <div class="social-links d-flex justify-content-center">
-        <a href=""><i class="bi bi-twitter-x"></i></a>
-        <a href=""><i class="bi bi-instagram"></i></a>
-        <a href=""><i class="bi bi-github"></i></a>
-        <a href=""><i class="bi bi-linkedin"></i></a>
+          <a href="https://x.com/Oluwadamil72390"><i class="bi bi-twitter-x"></i></a>
+          <a href="https://www.instagram.com/eliasc.dev/"><i class="bi bi-instagram"></i></a>
+          <a href="https://www.linkedin.com/in/godwin-eliaschukwudi-66bb18288/"><i class="bi bi-linkedin"></i></a>
+          <a href="https://github.com/Eliasc98"><i class="bi bi-github"></i></a>
       </div>
       <div class="container">
         <div class="copyright">
