--- a/index.html
+++ b/index.html
@@ -241,16 +241,15 @@ innovation and excellence.
 
             <h3 class="resume-title">Education</h3>
             <div class="resume-item">
-              <h4>Diploma In Desktop Publishing and Networking / Frontend Development</h4>
-              <h5>2016 - 2017</h5>
-              <p><em>Catholic Institute Of Information and Tech.</em></p>
-              <p>This program focuses on creating visually appealing content and understanding the technical aspects of networking and frontend technologies. Graduates are prepared for careers in various fields, including graphic design, web design/front-end development, and IT support, making them versatile professionals in the digital landscape.</p>
-            </div><!-- Edn Resume Item -->
+              <h4>B.Sc In F/Accounting</h4>
+              <h5>2017 - 2022</h5>
+              <p><em>Ebonyi State University</em></p>
+             </div><!-- Edn Resume Item -->
 
             <div class="resume-item">
               <h4>Certified of Completion PHP and Laravel Development</h4>
               <h5>2020-2021</h5>
-              <p><em>Udemy Online Course</em></p>
+              <p><em>Udemy</em></p>
               <p>This certification signifies my successful completion of a comprehensive online course in PHP and Laravel development. Throughout the program, I gained valuable skills in web application development, including backend programming, database management, and the use of the Laravel framework to build robust and scalable applications.</p>
             </div><!-- Edn Resume Item -->
 
@@ -388,7 +387,7 @@ innovation and excellence.
                 <h4>NAPPS Student Exam Portal</h4>
                 <p>Laravel, Mysql, RESTful API</p>
                 <a href="assets/img/portfolio/WhatsApp Image 2024-05-09 at 06.56.35.jpeg" title="Branding 2" data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                <a href="#" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                <a href="https://napps.successtab.ng/" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div><!-- End Portfolio Item -->
 
@@ -398,27 +397,27 @@ innovation and excellence.
                 <h4>NAPPS Student Portal</h4>
                 <p>Laravel, Mysql, RESTful API</p>
                 <a href="assets/img/portfolio/WhatsApp Image 2024-05-09 at 06.57.52.jpeg" title="App 3" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                <a href="#" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                <a href="https://napps.successtab.ng/" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div><!-- End Portfolio Item -->
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-product">
-              <img src="assets/img/masonry-portfolio/masonry-portfolio-8.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/image.png" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Product 3</h4>
-                <p>Lorem ipsum, dolor sit</p>
-                <a href="assets/img/masonry-portfolio/masonry-portfolio-8.jpg" title="Product 3" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                <h4>Cleaning CRM Portal</h4>
+                <p>Laravel, Livewire, Pgsql, Bootstrap</p>
+                <a href="assets/img/portfolio/image.png" title="Product 3" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                <a href="https://gleamglowtx.com/login" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div><!-- End Portfolio Item -->
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-branding">
-              <img src="assets/img/masonry-portfolio/masonry-portfolio-9.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/gg.png" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Branding 3</h4>
-                <p>Lorem ipsum, dolor sit</p>
-                <a href="assets/img/masonry-portfolio/masonry-portfolio-9.jpg" title="Branding 2" data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                <h4>Gleamglow Cleaning, Texas</h4>
+                <p>Bootstrap, Livewire, Laravel</p>
+                <a href="assets/img/portfolio/gg.png" title="Branding 2" data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                <a href="www.gleamglowtx.com" title="Gleamglow Cleaners, Texas" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div><!-- End Portfolio Item -->
 
