--- a/index.html
+++ b/index.html
@@ -113,8 +113,8 @@ and Laravel. Proven track record in delivering high-quality.
             <div class="row">
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>09 September 1998</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+234 902 458 5559</span></li>
+                  <!-- <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>09 September 1998</span></li> -->
+                  <li><i class="bi bi-chevron-right"></i> <strong>Whatsapp:</strong> <span>+234 902 458 5559</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Lagos, Nigeria</span></li>
                 </ul>
               </div>
