--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@ innovation and excellence.
               <img src="assets/img/portfolio/bayoum.png" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Bayou Movers Website</h4>
-                <p>A full moving website with Admin portal, subscribe system using Laravel.</p>
+                <p>A full moving website with Admin portal, subscribe system using Laravel, Vue, Bootstrap.</p>
                 <a href="assets/img/portfolio/bayoum.png" title="Branding 1" data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                 <a href="https://www.bayoumoverstx.com/" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
